--- a/DragonDBExample/App.config
+++ b/DragonDBExample/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="DragonsDBEntities" connectionString="metadata=res://*/Models.DragonDBModel.csdl|res://*/Models.DragonDBModel.ssdl|res://*/Models.DragonDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\DragonsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DragonsDBEntities" connectionString="metadata=res://*/Models.DragonDBModel.csdl|res://*/Models.DragonDBModel.ssdl|res://*/Models.DragonDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\user\source\repos\DragonDBExample\DragonDBExample\DragonsDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
